--- a/TomorrowNews/Base.lproj/Main.storyboard
+++ b/TomorrowNews/Base.lproj/Main.storyboard
@@ -34,38 +34,46 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KqE-DF-zDY">
-                                            <rect key="frame" x="0.0" y="0.0" width="374" height="603"/>
+                                            <rect key="frame" x="0.0" y="8" width="374" height="280"/>
                                             <gestureRecognizers/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="280" id="nks-Ib-rzf"/>
+                                            </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="wordWrap" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="omp-Tc-gTc">
-                                            <rect key="frame" x="16" y="383" width="342" height="16.5"/>
+                                            <rect key="frame" x="16" y="298" width="342" height="30"/>
                                             <attributedString key="attributedText">
                                                 <fragment content="Title">
                                                     <attributes>
-                                                        <color key="NSColor" red="1" green="0.98410020440000001" blue="0.92771713649999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                        <font key="NSFont" size="20" name="Helvetica"/>
+                                                        <color key="NSColor" red="0.030298737046632107" green="0.030007060004689681" blue="0.02827783519718529" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <font key="NSFont" size="36" name="HelveticaNeue-CondensedBold"/>
                                                         <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" lineHeightMultiple="0.69999999999999996" tighteningFactorForTruncation="0.0"/>
                                                     </attributes>
                                                 </fragment>
                                             </attributedString>
-                                            <color key="highlightedColor" red="1" green="0.98410020440000001" blue="0.92771713649999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <color key="highlightedColor" red="0.02179808937823835" green="0.021588245574516243" blue="0.020344174019618293" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="wordWrap" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V88-DN-UHp">
-                                            <rect key="frame" x="16" y="409.5" width="341" height="11.5"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="wordWrap" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V88-DN-UHp">
+                                            <rect key="frame" x="16" y="408" width="342" height="15"/>
                                             <attributedString key="attributedText">
                                                 <fragment content="Summary">
                                                     <attributes>
-                                                        <color key="NSColor" red="1" green="0.98410020440000001" blue="0.92771713649999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                        <font key="NSFont" size="14" name=".SFNSText"/>
+                                                        <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <font key="NSFont" size="18" name="Baskerville"/>
                                                         <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" lineHeightMultiple="0.69999999999999996" tighteningFactorForTruncation="0.0"/>
                                                     </attributes>
                                                 </fragment>
                                             </attributedString>
-                                            <color key="highlightedColor" red="1" green="0.98410020440000001" blue="0.92771713649999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <color key="highlightedColor" red="0.043798575129533668" green="0.043376939111655639" blue="0.04087724473394054" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </label>
-                                        <button opaque="NO" alpha="0.5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CwE-ld-Pxa">
-                                            <rect key="frame" x="302" y="338" width="42" height="30"/>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CwE-ld-Pxa">
+                                            <rect key="frame" x="16" y="245" width="70" height="35"/>
                                             <color key="backgroundColor" red="0.64764815409999998" green="0.082055581799999999" blue="0.06906917487" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="70" id="PVJ-rh-Rvx"/>
+                                                <constraint firstAttribute="height" constant="35" id="uR0-1x-RRe"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
                                             <state key="normal" title="Listen">
                                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <color key="titleShadowColor" red="1" green="0.98410020440000001" blue="0.92771713649999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -74,35 +82,69 @@
                                                 <action selector="audioButtonClicked:" destination="FRn-eq-ii6" eventType="touchUpInside" id="dO3-Yc-qnK"/>
                                             </connections>
                                         </button>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ub4-XU-5Zb">
-                                            <rect key="frame" x="8" y="342" width="36" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" red="1" green="0.98410020440000001" blue="0.92771713649999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ub4-XU-5Zb">
+                                            <rect key="frame" x="81" y="372" width="277" height="21.5"/>
+                                            <attributedString key="attributedText">
+                                                <fragment content="1 week ago">
+                                                    <attributes>
+                                                        <color key="NSBackgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <color key="NSColor" red="0.47032869170984459" green="0.47032869170984459" blue="0.47032869170984459" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <font key="NSFont" size="18" name="HelveticaNeue-Medium"/>
+                                                        <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                    </attributes>
+                                                </fragment>
+                                            </attributedString>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0mQ-m5-T0u">
+                                            <rect key="frame" x="16" y="338" width="60" height="60"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="60" id="3Er-u7-Qks"/>
+                                                <constraint firstAttribute="height" constant="60" id="aep-eL-T2T"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VHz-vG-iF7">
+                                            <rect key="frame" x="81" y="338" width="277" height="24"/>
+                                            <attributedString key="attributedText">
+                                                <fragment content="CBS News">
+                                                    <attributes>
+                                                        <font key="NSFont" size="20" name="HelveticaNeue-CondensedBold"/>
+                                                        <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                    </attributes>
+                                                </fragment>
+                                            </attributedString>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                 </view>
                                 <gestureRecognizers/>
                                 <constraints>
-                                    <constraint firstItem="Ub4-XU-5Zb" firstAttribute="leading" secondItem="KqE-DF-zDY" secondAttribute="leading" constant="8" id="1wd-0p-DTa"/>
-                                    <constraint firstItem="CwE-ld-Pxa" firstAttribute="trailing" secondItem="KqE-DF-zDY" secondAttribute="trailing" constant="-30" id="32X-u3-0DI"/>
-                                    <constraint firstItem="KqE-DF-zDY" firstAttribute="height" secondItem="FRn-eq-ii6" secondAttribute="height" id="5XM-Dg-LjN"/>
-                                    <constraint firstItem="Ub4-XU-5Zb" firstAttribute="baseline" secondItem="CwE-ld-Pxa" secondAttribute="baseline" id="CIH-Ak-wO8"/>
-                                    <constraint firstItem="omp-Tc-gTc" firstAttribute="top" secondItem="CwE-ld-Pxa" secondAttribute="bottom" constant="15" id="CNx-zx-PPg"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="VHz-vG-iF7" secondAttribute="trailing" constant="8" id="0IK-yY-uwf"/>
+                                    <constraint firstItem="V88-DN-UHp" firstAttribute="top" secondItem="0mQ-m5-T0u" secondAttribute="bottom" constant="10" id="4Zq-br-NZK"/>
+                                    <constraint firstItem="0mQ-m5-T0u" firstAttribute="leading" secondItem="FRn-eq-ii6" secondAttribute="leadingMargin" constant="8" id="6v6-dC-nFK"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="omp-Tc-gTc" secondAttribute="trailing" constant="8" id="AbD-uc-AbO"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="V88-DN-UHp" secondAttribute="trailing" constant="8" id="Az7-0z-IGV"/>
+                                    <constraint firstItem="0mQ-m5-T0u" firstAttribute="top" secondItem="omp-Tc-gTc" secondAttribute="bottom" constant="10" id="C6b-zX-ixc"/>
+                                    <constraint firstItem="omp-Tc-gTc" firstAttribute="top" secondItem="KqE-DF-zDY" secondAttribute="bottom" constant="10" id="Dq6-ce-XNH"/>
                                     <constraint firstItem="KqE-DF-zDY" firstAttribute="centerX" secondItem="FRn-eq-ii6" secondAttribute="centerX" id="GRM-OM-1kn"/>
                                     <constraint firstItem="omp-Tc-gTc" firstAttribute="leading" secondItem="FRn-eq-ii6" secondAttribute="leadingMargin" constant="8" id="K7X-Sb-4RJ"/>
-                                    <constraint firstItem="V88-DN-UHp" firstAttribute="top" secondItem="omp-Tc-gTc" secondAttribute="bottom" constant="10" id="X8O-kV-mtO"/>
-                                    <constraint firstItem="omp-Tc-gTc" firstAttribute="centerX" secondItem="KqE-DF-zDY" secondAttribute="centerX" id="aGW-Fx-H7B"/>
+                                    <constraint firstItem="CwE-ld-Pxa" firstAttribute="top" secondItem="KqE-DF-zDY" secondAttribute="bottom" constant="-43" id="LcQ-uB-bLd"/>
+                                    <constraint firstItem="VHz-vG-iF7" firstAttribute="leading" secondItem="0mQ-m5-T0u" secondAttribute="trailing" constant="5" id="PKb-wC-Cw1"/>
+                                    <constraint firstItem="VHz-vG-iF7" firstAttribute="top" secondItem="omp-Tc-gTc" secondAttribute="bottom" constant="10" id="Qo6-Gw-V2W"/>
+                                    <constraint firstItem="CwE-ld-Pxa" firstAttribute="leading" secondItem="FRn-eq-ii6" secondAttribute="leadingMargin" constant="8" id="XDt-qh-rwI"/>
+                                    <constraint firstItem="Ub4-XU-5Zb" firstAttribute="top" secondItem="VHz-vG-iF7" secondAttribute="bottom" constant="10" id="gPn-tI-QGd"/>
                                     <constraint firstItem="V88-DN-UHp" firstAttribute="leading" secondItem="FRn-eq-ii6" secondAttribute="leadingMargin" constant="8" id="hcl-gT-Miy"/>
-                                    <constraint firstItem="KqE-DF-zDY" firstAttribute="centerY" secondItem="FRn-eq-ii6" secondAttribute="centerY" id="k3m-Hu-e8V"/>
-                                    <constraint firstItem="omp-Tc-gTc" firstAttribute="top" secondItem="KqE-DF-zDY" secondAttribute="bottom" constant="-220" id="lCd-aT-4R5"/>
+                                    <constraint firstItem="Ub4-XU-5Zb" firstAttribute="leading" secondItem="0mQ-m5-T0u" secondAttribute="trailing" constant="5" id="j3i-NJ-HT7"/>
                                     <constraint firstItem="KqE-DF-zDY" firstAttribute="width" secondItem="FRn-eq-ii6" secondAttribute="width" id="n1d-Qn-rgw"/>
-                                    <constraint firstItem="V88-DN-UHp" firstAttribute="centerX" secondItem="KqE-DF-zDY" secondAttribute="centerX" id="p3S-Ig-jML"/>
+                                    <constraint firstItem="KqE-DF-zDY" firstAttribute="top" secondItem="FRn-eq-ii6" secondAttribute="topMargin" id="t60-JX-Wx8"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="Ub4-XU-5Zb" secondAttribute="trailing" constant="8" id="xHm-9h-8Cq"/>
                                 </constraints>
                                 <size key="customSize" width="374" height="603"/>
                                 <connections>
                                     <outlet property="dateLabel" destination="Ub4-XU-5Zb" id="Q3M-31-zfW"/>
                                     <outlet property="itemImageView" destination="KqE-DF-zDY" id="VtC-qe-kah"/>
+                                    <outlet property="publisherLogoImageView" destination="0mQ-m5-T0u" id="l1f-Li-WWy"/>
+                                    <outlet property="publisherNameLabel" destination="VHz-vG-iF7" id="hzA-6S-xDU"/>
                                     <outlet property="summaryLabel" destination="V88-DN-UHp" id="4tz-Sm-u62"/>
                                     <outlet property="titleLabel" destination="omp-Tc-gTc" id="7cT-h6-d2P"/>
                                     <outletCollection property="titleLabel" destination="omp-Tc-gTc" id="Mtj-CW-Ia5"/>
