--- a/TomorrowNews/ChannelCollectionViewCell.xib
+++ b/TomorrowNews/ChannelCollectionViewCell.xib
@@ -18,25 +18,23 @@
                 <rect key="frame" x="0.0" y="0.0" width="155" height="155"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CiA-Ic-7eh">
+                    <imageView userInteractionEnabled="NO" alpha="0.80000000000000004" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CiA-Ic-7eh">
                         <rect key="frame" x="0.0" y="0.0" width="155" height="155"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </imageView>
-                    <view alpha="0.80000000000000016" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KDb-0w-4oW">
-                        <rect key="frame" x="0.0" y="0.0" width="155" height="155"/>
-                        <color key="backgroundColor" red="0.089511200785636902" green="0.089508526027202606" blue="0.089510053396224976" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vxT-TK-gT8">
                         <rect key="frame" x="0.0" y="0.0" width="155" height="155"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ihB-yP-WxM">
                                 <rect key="frame" x="27" y="17" width="100" height="100"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="6bv-nC-66v"/>
                                     <constraint firstAttribute="height" constant="100" id="l3F-5I-LCK"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pUW-Vt-AA5">
-                                <rect key="frame" x="0.0" y="117" width="155" height="21"/>
+                                <rect key="frame" x="0.0" y="127" width="155" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="7tl-gH-4bP"/>
                                 </constraints>
@@ -49,12 +47,13 @@
                                         </attributes>
                                     </fragment>
                                 </attributedString>
-                                <nil key="highlightedColor"/>
+                                <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </label>
                         </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="centerY" secondItem="ihB-yP-WxM" secondAttribute="centerY" constant="10.5" id="790-vI-rzh"/>
-                            <constraint firstAttribute="centerY" secondItem="pUW-Vt-AA5" secondAttribute="centerY" constant="-50" id="7Gp-PB-iuP"/>
+                            <constraint firstAttribute="centerY" secondItem="pUW-Vt-AA5" secondAttribute="centerY" constant="-60" id="7Gp-PB-iuP"/>
                             <constraint firstAttribute="trailing" secondItem="pUW-Vt-AA5" secondAttribute="trailing" id="7ne-mZ-vRa"/>
                             <constraint firstAttribute="centerX" secondItem="ihB-yP-WxM" secondAttribute="centerX" id="BZw-i9-1zl"/>
                             <constraint firstAttribute="trailing" secondItem="ihB-yP-WxM" secondAttribute="trailing" constant="28" id="Cxd-bm-RWZ"/>
@@ -76,16 +75,12 @@
             </view>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="vxT-TK-gT8" secondAttribute="bottom" id="0Pb-aM-diz"/>
-                <constraint firstItem="KDb-0w-4oW" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="4KR-Pt-nJi"/>
                 <constraint firstItem="CiA-Ic-7eh" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="6Vi-Mz-xze"/>
                 <constraint firstItem="vxT-TK-gT8" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="7bY-3S-c6e"/>
                 <constraint firstAttribute="bottom" secondItem="CiA-Ic-7eh" secondAttribute="bottom" id="BND-Hq-KCR"/>
                 <constraint firstItem="CiA-Ic-7eh" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="DIZ-Yt-0N4"/>
-                <constraint firstItem="KDb-0w-4oW" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Ebu-Rr-YyV"/>
                 <constraint firstAttribute="trailing" secondItem="vxT-TK-gT8" secondAttribute="trailing" id="XmT-2M-QtH"/>
                 <constraint firstAttribute="trailing" secondItem="CiA-Ic-7eh" secondAttribute="trailing" id="kt3-ad-CQ8"/>
-                <constraint firstAttribute="bottom" secondItem="KDb-0w-4oW" secondAttribute="bottom" id="lR9-fk-Ckl"/>
-                <constraint firstAttribute="trailing" secondItem="KDb-0w-4oW" secondAttribute="trailing" id="lz6-6j-TUy"/>
                 <constraint firstItem="vxT-TK-gT8" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="wth-Gr-TEU"/>
             </constraints>
             <size key="customSize" width="186" height="163"/>
