--- a/TomorrowNews/RecommendedArticle.xib
+++ b/TomorrowNews/RecommendedArticle.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="RecommendedArticleView" customModule="iOSPractice1" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="RecommendedArticleView" customModule="TomorrowNews" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="463" height="250"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
