--- a/TomorrowNews/Base.lproj/Main.storyboard
+++ b/TomorrowNews/Base.lproj/Main.storyboard
@@ -33,8 +33,8 @@
                                     <rect key="frame" x="0.0" y="0.0" width="374" height="603"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.90000000000000002" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KqE-DF-zDY">
-                                            <rect key="frame" x="0.0" y="8" width="374" height="280"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.90000000000000002" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KqE-DF-zDY">
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="280"/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                             <gestureRecognizers/>
                                             <constraints>
@@ -86,7 +86,7 @@
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ub4-XU-5Zb">
                                             <rect key="frame" x="81" y="372" width="277" height="22"/>
                                             <attributedString key="attributedText">
-                                                <fragment content="1 week ago">
+                                                <fragment content="2 hours ago">
                                                     <attributes>
                                                         <color key="NSBackgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <color key="NSColor" red="0.47032869170984459" green="0.47032869170984459" blue="0.47032869170984459" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
